[package]
name = "intertense"
version = "0.1.0"
edition = "2024"

[dependencies]
b-k-tree = { version = "0.5.0", optional = true}
burn = { version = "0.19", features = ["fusion","train","wgpu"], optional = true}
either = "1"
rand = "0.9"
serde = { version = "1", features = ["derive","rc"], optional = true }
umya-spreadsheet = { version = "2", optional = true}

[features]
default = ["serial"]
burn-ml = ["burn"]
match-tensor = []
serial = ["serde"]
umya-sheet = ["b-k-tree", "umya-spreadsheet"]

[profile.test]
opt-level = 3
